    - BUG: Passing qs args in RelayState
    - BANGBANG_PAT to enable bang bang expansion of outputs, even in mini_httpd_zxid

zxid-1.18:: 20.11.2013
    - More bug fixing in mini_httpd_zxid
    - Generalized redir_to_content and moved it to zxid_simple()
    - Moved defaultqs feature feature to zxid_simple()
    - Added %d expansion for VURL

zxid-1.17:: 16.11.2013
    - More bug fixing in mini_httpd_zxid

zxid-1.16:: 11.11.2013
    - Remodelled the Makefile
    - Tested TARGET=xmingw64 builds
    - Fixed some SOAP header ordering bugs
    - Fixed handling of NULL returns in Net::SAML module
    - Fixed serious bugs in mini_httpd_zxid

zxid-1.15:: 26.10.2013
    - Added wsp_pat option
    - Added mini_httpd_zxid (derived from original by Jeff Poskanzer, see acme.com)
    - Improved error reporting of the credential (assertion) expired situation

zxid-1.13:: 14.3.2013
    - Added language/skin dependent templates

zxid-1.12:: 21.11.2012
    - Added sketchy kqueue support based on FreeBSD man page, but did not test
    - Fixed compile errors and warnings on MacOS per Michael Dondrup at uni.no
    - Added better obligations support

zxid-1.11:: 30.9.2012
    - Added audit bus infrastructure (not yet universally propagated)
    - Added simplistic yubikey 2 factor authentication (pin+yubikey)
    - Fixed templ query string arg, enabling tabbed UI to work
    - Audit bus receipt confirmation signature bus-confirm: B64FORSIGNEDRECEIPT
    - Added PTM support

zxid-1.10:: 21.4.2012
    - Added support for OAUTH2 / OpenID-Connect1 Minimal / Basic Profile (both RP and IdP) (the support is still very preliminary)
    - Adapted SAML2 metadata to support OAUTH2, using Binding="urn:zxid:OAUTH:2.0:bindings:HTTP-Redirect" (OAUTH2-REDIR)
    - Corrected the OrganizationURL to be absolute
    - VPATH and VURL processing tweaks
    - Improved error reporting in zxididp and zxidhlo
    - Eliminate coordinates from the end of the branding login buttons