@@ -1,1 +1,1 @@
-$Id: 1.18-5-ga5ef78e 20131121-222139 sampo@ $
+$Id: 1.18-6-g668f25b 20131121-235720 sampo@ $
